WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85173
[EFL] Frame load callbacks output is missing for redirections
https://bugs.webkit.org/show_bug.cgi?id=85173
Summary
[EFL] Frame load callbacks output is missing for redirections
Chris Dumez
Reported
2012-04-30 03:20:32 PDT
Several tests rely on EFL's DRT properly printing frame load callbacks output for redirections such as "didReceiveServerRedirectForProvisionalLoadForFrame" and "willPerformClientRedirectToURL": http/tests/loading/307-after-303-after-post.html = TEXT http/tests/loading/redirect-methods.html = TEXT
Attachments
Patch
(14.80 KB, patch)
2012-04-30 03:29 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.59 KB, patch)
2012-05-02 23:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.93 KB, patch)
2012-05-04 00:52 PDT
,
Chris Dumez
tonikitoo
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(15.26 KB, patch)
2012-05-04 09:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-04-30 03:29:34 PDT
Created
attachment 139429
[details]
Patch
Chris Dumez
Comment 2
2012-05-02 23:02:17 PDT
Created
attachment 139958
[details]
Patch Rebase on master.
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-05-03 08:27:06 PDT
Comment on
attachment 139958
[details]
Patch Makes sense.
Chris Dumez
Comment 4
2012-05-04 00:49:43 PDT
***
Bug 84573
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 5
2012-05-04 00:52:55 PDT
Created
attachment 140174
[details]
Patch Rebase on master.
Gyuyoung Kim
Comment 6
2012-05-04 01:15:43 PDT
Comment on
attachment 140174
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140174&action=review
> Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:570 > + const char* url = static_cast<const char*>(eventInfo);
Is it better to use const_cast<char*> instead of static_cast<const char*> ?
Raphael Kubo da Costa (:rakuco)
Comment 7
2012-05-04 06:17:09 PDT
Comment on
attachment 140174
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140174&action=review
>> Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:570 >> + const char* url = static_cast<const char*>(eventInfo); > > Is it better to use const_cast<char*> instead of static_cast<const char*> ?
I don't see much value in doing that -- by using a const char* here we also indicate the value is not supposed to be changed.
Antonio Gomes
Comment 8
2012-05-04 07:44:28 PDT
Comment on
attachment 140174
[details]
Patch ok
WebKit Review Bot
Comment 9
2012-05-04 07:46:02 PDT
Comment on
attachment 140174
[details]
Patch Rejecting
attachment 140174
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: k/ewk_private.h patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp Hunk #2 succeeded at 499 (offset 1 line). Hunk #3 succeeded at 558 (offset 1 line). Hunk #4 succeeded at 589 (offset 1 line). patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Antonio Go..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12565151
WebKit Review Bot
Comment 10
2012-05-04 09:14:10 PDT
Comment on
attachment 140174
[details]
Patch Rejecting
attachment 140174
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: k/ewk_private.h patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp Hunk #2 succeeded at 499 (offset 1 line). Hunk #3 succeeded at 558 (offset 1 line). Hunk #4 succeeded at 589 (offset 1 line). patching file Tools/DumpRenderTree/efl/DumpRenderTreeChrome.h Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Antonio Go..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue/ Full output:
http://queues.webkit.org/results/12565177
Chris Dumez
Comment 11
2012-05-04 09:17:24 PDT
Created
attachment 140248
[details]
Patch for landing Rebasing the patch for landing since the commit queue seems to have trouble.
WebKit Review Bot
Comment 12
2012-05-04 10:22:16 PDT
Comment on
attachment 140248
[details]
Patch for landing Clearing flags on attachment: 140248 Committed
r116119
: <
http://trac.webkit.org/changeset/116119
>
WebKit Review Bot
Comment 13
2012-05-04 10:22:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug