[EFL] Frame load callbacks output is missing for redirections https://bugs.webkit.org/show_bug.cgi?id=85173

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-04
Reviewed by Antonio Gomes.

Source/WebKit/efl:

Add a few redirection-related signals on the ewk_frame so that EFL's
DumpRenderTree can print the expected output when
LayoutTestController's dumpFrameLoadCallbacks() returns true.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchWillSendRequest):
(WebCore::FrameLoaderClientEfl::dispatchDidReceiveResponse):
(WebCore::FrameLoaderClientEfl::dispatchDidReceiveServerRedirectForProvisionalLoad):
(WebCore::FrameLoaderClientEfl::dispatchWillPerformClientRedirect):
* ewk/ewk_frame.cpp:
(ewk_frame_redirect_provisional_load):
(ewk_frame_redirect_requested):
* ewk/ewk_frame.h:
* ewk/ewk_private.h:

Tools:

Catch the new ewk_frame signals to print the expected output in case
of redirections, when LayoutTestController's dumpFrameLoadCallbacks()
returns true.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onWillSendRequest):
(DumpRenderTreeChrome::onFrameCreated):
(DumpRenderTreeChrome::onFrameRedirectForProvisionalLoad):
(DumpRenderTreeChrome::onFrameRedirectRequested):
(DumpRenderTreeChrome::onResponseReceived):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

Update test_expectations.txt now that EFL's DumpRenderTree is
correctly printing frame load callbacks information in case of
redirections.

* platform/efl/Skipped:
* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/103192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116119 268f45cc-cd09-0410-ab3c-d52691b4dbfc